[package]
name = "math-util"
version = "0.0.0"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/math-util"
repository = "https://github.com/d-e-s-o/math-util.git"
readme = "README.md"
description = """
A crate providing miscellaneous mathematical utility functions.
"""

[dependencies]
